# Better-Wallpapers

./: CMakeLists.txt  README.md  bing_wallpaper.cpp  bing_wallpaper.h  main.cpp  mainwindow.cpp  mainwindow.h  unsplash.cpp  unsplash.h  wallpaper_utils.cpp  wallpaper_utils.h
src/: bing_wallpaper.cpp  bing_wallpaper.h  favourites.cpp  favourites.h  icon.h  main.cpp  mainwindow.cpp  mainwindow.h  nasa.cpp  nasa.h  unsplash.cpp  unsplash.h  wallpaper_utils.cpp  wallpaper_utils.h
